tach dto cho lesson